fixing dropdown menu horizontal scroll

--- a/styles/module.scss
+++ b/styles/module.scss
@@ -1881,6 +1881,7 @@ footer {
                     flex-direction: column;
                     justify-content: flex-start;
                     align-items: flex-start;
+                    overflow: hidden;
                     width: 150px;
                     background-color: rgba(120,189,226, 0.5);
                     border-radius: 5px;
